--- a/playere/controls.html
+++ b/playere/controls.html
@@ -178,10 +178,11 @@
       }
       
       .videoCentered {
-        width: 700px;
+        width: 900px;
         height: auto;
         margin-left: 10%;
         margin-right: auto;
+        margin-top: 3%;
         display: block;
         overflow: hidden;
         background-color: #000;
